--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fritter_repacked
+name: fritter
 description: An open-source Twitter client
 
 # The following line prevents the package from being accidentally published to
